Intro spacing issue fix

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,11 +4,16 @@
   align-items: center;
 }
 
-.intro {
-  display: flex;
-  justify-content: space-around;
-  background-color: #fceb21;
+.intro-container {
   width: 100vw;
+  background-color: #fceb21;
+}
+
+.intro {
+  margin: 0 auto 0 auto;
+  display: flex;
+  justify-content: space-between;
+  width: 1400px;
   height: 450px;
 }
 
@@ -25,6 +30,10 @@
   line-height: 50px;
   font-size: 25px;
   margin: 75px 200px 0 -400px;
+}
+
+.info-container {
+  width: 100vh;
 }
 
 .info {
